spade-tests/src/snapshots/spade_tests__typeinference__int_add_produces_int.snap
---
source: spade-tests/src/typeinference.rs
---
fn test(x: int<8>, y: int<8>) -> uint<9> {
    x + y
}


error: Expected type uint<9>, got int<_>
  ┌─ testinput:2:5
  │
2 │     x + y
  │     ^^^^^ Expected uint<9>
  │
  = note: Expected: uint<9>
               Got: int<_>


